<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PaintBuiLder</string>
    <string name="paint_button">描画モード</string>
    <string name="com_button">通信モード</string>
    
    <string name="room_select">部屋選択</string>
    <string name="make_room">部屋作成</string>
    <string name="refresh">更新</string>
    <string name="send">送信</string>
    <string name="blank"></string>
    
    <string name="up_directory">../</string>
    <string name="make_shelf">本棚を作成</string>
    <string name="make_book">お絵かき帳を作成</string>
    <string name="create">作成</string>
    <string name="delete">削除</string>
    <string name="right">右へ</string>
    <string name="left">左へ</string>
    <string name="miss">失敗</string>
</resources>