<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hondana"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_weight="0.01" >

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/up_directory" />

        <Button
            android:id="@+id/add_shelf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/make_shelf" />

        <Button
            android:id="@+id/add_book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/make_book" />
    </LinearLayout>

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="362dp"
        android:layout_weight="0.42" >
    </ListView>

</LinearLayout>